# OpenGL-Demo

./: .gitignore  CMakeLists.txt  README.md  README_CN.md
src/: camera.c  camera.h  main.c  mesh.c  mesh.h  shader.c  shader.h  texture.c  texture.h
src/glsl/: cube.f.glsl  cube.v.glsl  floor.f.glsl  floor.v.glsl
